--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -1,6 +1,12 @@
 body
     font-family: 'Lato'
+    margin: 0
+
 .d-flex
     display: flex
 .justify-center
     justify-content: center
+.align-center
+    align-items: center
+.font-bold
+    font-weight: bold
