complete footer and second banner

--- a/assets/sass/mixins.sass
+++ b/assets/sass/mixins.sass
@@ -7,6 +7,8 @@ $through: 600
         font-size: #{$i}px
     .width__#{$i}
         width: #{$i}#{'%'}
+    .max__width__#{$i}
+        max-width: #{$i}px !important
     // .width_vh_#{$i}
     //     width: #{$i}#{'vh'} !important
     // .max__width__#{$i}
