--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -10,3 +10,11 @@ body
     align-items: center
 .font-bold
     font-weight: bold
+.bg__pink
+    background-color: $pink
+.bg__purple
+    background-color: $purple
+.color__white
+    color: $white
+.text-right
+    text-align: right
