complete version desktop

--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -14,7 +14,13 @@ body
     background-color: $pink
 .bg__purple
     background-color: $purple
+.bg__white
+    background-color: #FFFFFF
+.bg__grey
+    background-color: $grey
 .color__white
     color: $white
 .text-right
     text-align: right
+.text-center
+    text-align: center
